Add mobile media upload flow
